// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`POST /osc/commands/execute _getMetadata should respond with results 1`] = `
{
  "name": "camera._getMetadata",
  "results": {
    "exif": {
      "ApertureValue": 0,
      "BrightnessValue": 0,
      "ColorSpace": 1,
      "Compression": 6,
      "Copyright": "",
      "DateTime": "2015:07:10 11:05:18",
      "ExifVersion": "0231",
      "ExposureBiasValue": 0,
      "ExposureProgram": 2,
      "ExposureTime": 0.03333333333333333,
      "FNumber": 2.4,
      "Flash": 32,
      "FocalLength": 1.37,
      "GPSLatitude": 35.68045,
      "GPSLatitudeRef": "N",
      "GPSLongitude": 139.76905555555558,
      "GPSLongitudeRef": "E",
      "ImageDescription": "",
      "ImageLength": 5504,
      "ImageWidth": 11008,
      "Make": "RICOH",
      "Model": "RICOH THETA X ",
      "Orientation": 1,
      "PhotographicSensitivity": 320,
      "Software": "RICOH THETA X Ver 1.41.0",
      "WhiteBalance": 0,
    },
    "xmp": {
      "CroppedAreaImageHeightPixels": 5504,
      "CroppedAreaImageWidthPixels": 11008,
      "CroppedAreaLeftPixels": 0,
      "CroppedAreaTopPixels": 0,
      "FullPanoHeightPixels": 5504,
      "FullPanoWidthPixels": 11008,
      "ProjectionType": "equirectangular",
      "UsePanoramaViewer": true,
    },
  },
  "state": "done",
}
`;

exports[`THETA X POST /osc/commands/execute _getMetadata should respond with results 1`] = `
{
  "name": "camera._getMetadata",
  "results": {
    "exif": {
      "ApertureValue": 0,
      "BrightnessValue": 0,
      "ColorSpace": 1,
      "Compression": 6,
      "Copyright": "",
      "DateTime": "2015:07:10 11:05:18",
      "ExifVersion": "0231",
      "ExposureBiasValue": 0,
      "ExposureProgram": 2,
      "ExposureTime": 0.03333333333333333,
      "FNumber": 2.4,
      "Flash": 32,
      "FocalLength": 1.37,
      "GPSLatitude": 35.68045,
      "GPSLatitudeRef": "N",
      "GPSLongitude": 139.76905555555558,
      "GPSLongitudeRef": "E",
      "ImageDescription": "",
      "ImageLength": 5504,
      "ImageWidth": 11008,
      "Make": "RICOH",
      "Model": "RICOH THETA X ",
      "Orientation": 1,
      "PhotographicSensitivity": 320,
      "Software": "RICOH THETA X Ver 1.41.0",
      "WhiteBalance": 0,
    },
    "xmp": {
      "CroppedAreaImageHeightPixels": 5504,
      "CroppedAreaImageWidthPixels": 11008,
      "CroppedAreaLeftPixels": 0,
      "CroppedAreaTopPixels": 0,
      "FullPanoHeightPixels": 5504,
      "FullPanoWidthPixels": 11008,
      "ProjectionType": "equirectangular",
      "UsePanoramaViewer": true,
    },
  },
  "state": "done",
}
`;

exports[`THETA Z1 POST /osc/commands/execute _getMetadata should respond with results 1`] = `
{
  "name": "camera._getMetadata",
  "results": {
    "exif": {
      "ApertureValue": 4.97,
      "BrightnessValue": 6.8,
      "ColorSpace": 1,
      "Compression": 6,
      "Copyright": "",
      "DateTime": "2015:07:10 11:05:18",
      "ExifVersion": "0231",
      "ExposureBiasValue": 0,
      "ExposureProgram": 2,
      "ExposureTime": 0.0125,
      "FNumber": 5.6,
      "Flash": 32,
      "FocalLength": 2.57,
      "GPSLatitude": 35.68045,
      "GPSLatitudeRef": "N",
      "GPSLongitude": 139.76906,
      "GPSLongitudeRef": "E",
      "ImageDescription": "                                                               ",
      "ImageLength": 3360,
      "ImageWidth": 6720,
      "Make": "RICOH",
      "Model": "RICOH THETA Z1",
      "Orientation": 1,
      "PhotographicSensitivity": 125,
      "Software": "RICOH THETA Z1 Ver 2.20.3",
      "WhiteBalance": 0,
    },
    "xmp": {
      "CroppedAreaImageHeightPixels": 3360,
      "CroppedAreaImageWidthPixels": 6720,
      "CroppedAreaLeftPixels": 0,
      "CroppedAreaTopPixels": 0,
      "FullPanoHeightPixels": 3360,
      "FullPanoWidthPixels": 6720,
      "ProjectionType": "equirectangular",
      "UsePanoramaViewer": true,
    },
  },
  "state": "done",
}
`;
